--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+/* html{
+  scroll-behavior: smooth;
+} */
+
 a {
   scroll-behavior: smooth;
 }
@@ -16,7 +20,7 @@ body{
   margin: 0;
   color: white;
   padding:10px 0px;
-  background-color: #00010a;
+  /* background-color: #00010a; */
 }
 
 @media (prefers-color-scheme: dark) {
