--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,17 @@ body{
   .text-balance {
     text-wrap: balance;
   }
+  .text-stroke{
+    -webkit-text-stroke: 2px white;
+    color: transparent;
+  }
+
+  @media only screen and (max-width: 600px) {
+    .text-stroke{
+      -webkit-text-stroke: 1px white;
+      color: transparent;
+    }
+  }
 }
 
 @layer base {
@@ -64,6 +75,11 @@ body{
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+    --color-1: 0 100% 63%;
+    --color-2: 270 100% 63%;
+    --color-3: 210 100% 63%;
+    --color-4: 195 100% 63%;
+    --color-5: 90 100% 63%;
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -90,6 +106,11 @@ body{
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --color-1: 0 100% 63%;
+    --color-2: 270 100% 63%;
+    --color-3: 210 100% 63%;
+    --color-4: 195 100% 63%;
+    --color-5: 90 100% 63%;
   }
 }
 
